--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,14 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:text="Enter Pokemon Name"
+        android:textSize="24sp"
+        android:layout_margin="16dp"
+        />
 
-</FrameLayout>
+    <!-- TODO: Update blank fragment layout -->
+    <EditText
+        android:id="@+id/pkmnEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        />
+
+    <Button
+        android:id="@+id/fetch_pkmn_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Search!"
+        android:layout_margin="16dp"
+        />
+
+</LinearLayout>
